Change keyPath target to Layout<>

--- a/.sourcery.yml
+++ b/.sourcery.yml
@@ -8,3 +8,4 @@ args:
   xanchors: [left, right, leading, trailing, centerX]
   yanchors: [top, bottom, centerY]
   dimanchors: [width, height]
+  uikit_anchors: [NSLayoutXAxisAnchor, NSLayoutYAxisAnchor, NSLayoutDimension]
